--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Quiz app</title>
 </head>
 <body>
@@ -51,7 +52,7 @@
             </div>
             Acessibilidade
         </button>
-        
+
 
 
 
