seção de boas-vindas estilizado

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </h1>
             
           
-        <p>Escolha um assunto para começar</p>
+        <p>Escolha um assunto para começar.</p>
       </section>
       <section class="assuntos">
         <button>
