--- a/index.html
+++ b/index.html
@@ -32,28 +32,28 @@
         <p>Escolha um assunto para começar.</p>
       </section>
       <section class="assuntos">
-        <button>
+        <button class="botao_html">
             <div>
                 <img src="./assets/images/icon-html.svg" alt="ícone do html">
             </div>
             HTML
         </button>
 
-        <button>
+        <button class="botao_css">
             <div>
                 <img src="./assets/images/icon-css.svg" alt="ícone do css">
             </div>
             CSS
         </button>
 
-        <button>
+        <button class="botao_javascript">
             <div>
                 <img src="./assets/images/icon-js.svg" alt="ícone do Javascript">
             </div>
             Javascript
         </button>
 
-        <button>
+        <button class="botao_acessibilidade">
             <div>
                 <img src="./assets/images/icon-accessibility.svg" alt="ícone do acessibilidade">
             </div>
