--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Quiz app</title>
 </head>
-<body>
+<body class="escuro">
 
     <header>
         <div class="tema">
