criação da página do quiz

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     </header>
     <main>
       <section class="boas_vindas">
-        <h1>Bem-vindo(a) ao <br> 
+        <h1>
+            Bem-vindo(a) ao <br> 
          <strong>Frontend Quiz!</strong>
 
         </h1>
@@ -65,5 +66,7 @@
 
       </section>
     </main>
+
+    <a href="./pages/quiz/quiz.html">Quiz</a>
 </body>
 </html>
