parte final das alternativas finalizadas e página finalizada

--- a/pages/quiz/quiz.html
+++ b/pages/quiz/quiz.html
@@ -52,11 +52,32 @@
                     <input type="radio" id="alternativa_b">
                     <div>
                         <span>B</span>
-                        Hyper Trainer Marking Language
+                        Hyper Text Marketing Language
                     </div>
                 </label>
-                
+
+                <label for="alternativa_c">
+                    <input type="radio" id="alternativa_c">
+
+                    <div>
+                        <span>C</span>
+                        Hyper Text Markup Language
+
+                    </div>
+
+                </label>
+                <label for="alternativa_d">
+                    <input type="radio" id="alaternativa_d">
+
+                    <div>
+                        <span>D</span>
+                        Hyper Text Markup Leveler
+                    </div>
+                </label>
             </form>
+
+
+            <button>Enviar</button>
         </section>
     </main>
 </body>
