adicionado o efeito de seleção das alternativas

--- a/pages/quiz/quiz.html
+++ b/pages/quiz/quiz.html
@@ -45,7 +45,7 @@
         <section class="alternativas">
             <form action="">
                 <label for="alternativa_a">
-                    <input type="radio" id="alternativa_a">
+                    <input type="radio" id="alternativa_a" name="alternativa">
 
                     <div>
                         <span>A</span>
@@ -54,7 +54,7 @@
                 </label>
 
                 <label for="alternativa_b">
-                    <input type="radio" id="alternativa_b">
+                    <input type="radio" id="alternativa_b" name="alternativa">
                     <div>
                         <span>B</span>
                         Hyper Text Marketing Language
@@ -62,7 +62,7 @@
                 </label>
 
                 <label for="alternativa_c">
-                    <input type="radio" id="alternativa_c">
+                    <input type="radio" id="alternativa_c" name="alternativa">
 
                     <div>
                         <span>C</span>
@@ -72,7 +72,7 @@
 
                 </label>
                 <label for="alternativa_d">
-                    <input type="radio" id="alaternativa_d">
+                    <input type="radio" id="alaternativa_d" name="alternativa">
 
                     <div>
                         <span>D</span>
