adicionada a responsividade para desktop

--- a/pages/quiz/quiz.html
+++ b/pages/quiz/quiz.html
@@ -31,11 +31,12 @@
 
     <main>
         <section class="pergunta">
+            <div>
+                <p>Questão 6 de 10</p>
 
-            <p>Questão 6 de 10</p>
-
-            <h2>Qual o significado de HTML?</h2>
-
+                <h2>Qual o significado de HTML?</h2>
+    
+            </div>
             <div class="barra_progresso">
                 <div></div>
 
