--- a/pages/resultados/resultado.html
+++ b/pages/resultados/resultado.html
@@ -3,11 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="resultado.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <title>Quiz App</title>
 </head>
 <body>
+    <header>
+        <div class="assuntos">
+         <div class="assuntos_icone">
+            <img src="../../assets/images/icon-accessibility.svg" alt="ícone de acessibilidade">
+         </div>
 
-    
-    
+         <h1>Acessibilidade</h1>
+        </div>
+
+        <div class="tema">
+            <img src="../../assets/images/icon-sun-dark.svg" alt="ícone do sol">
+            <button>
+                <div></div>
+            </button>
+        <img src="../../assets/images/icon-moon-dark.svg" alt="ícone da lua">  
+
+        </div>
+    </header>  
 </body>
 </html>
