término do resultado.html

--- a/pages/resultados/resultado.html
+++ b/pages/resultados/resultado.html
@@ -27,6 +27,28 @@
         <img src="../../assets/images/icon-moon-dark.svg" alt="ícone da lua">  
 
         </div>
-    </header>  
+    </header> 
+    
+    <main>
+        <h2>
+            Quiz completo <br>
+            <strong>Sua pontuação...</strong>
+        </h2>
+
+        <section class="pontuacao">
+            <div class="assuntos">
+                <div class="assuntos_icone">
+                   <img src="../../assets/images/icon-accessibility.svg" alt="ícone de acessibilidade">
+                </div>
+       
+                <h1>Acessibilidade</h1>
+               </div>
+
+               <strong>8</strong>
+
+               <p>de 10</p>
+        </section>
+        <button>Jogar novamente</button>
+    </main>
 </body>
 </html>
