ajuste do h2 página resultados para desktop

--- a/pages/resultados/resultado.html
+++ b/pages/resultados/resultado.html
@@ -32,8 +32,10 @@
     <main>
         <h2>
             Quiz completo <br>
-            <strong>Sua pontuação...</strong>
+            <strong>Seus pontos...</strong>
         </h2>
+
+        <div>
 
         <section class="pontuacao">
             <div class="assuntos">
@@ -49,6 +51,7 @@
                <p>de 10</p>
         </section>
         <button>Jogar novamente</button>
+    </div>
     </main>
 </body>
 </html>
